--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,23 @@
-body {
-    color: red;
+.box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    border: 20px solid black;
+    background-color: rgb(85, 101, 130);
+    margin: 15px 10px;
+    padding: 5px;
+
+}
+
+.button {
+    background-color: rgb(241, 156, 114);
+    margin: 15px;
+    padding: 10px 70px; 
+}
+
+#button-logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
 }
