--- a/estilos.css
+++ b/estilos.css
@@ -17,6 +17,7 @@
 #box-1 {
     background-color: rgb(85, 101, 130);
     margin-bottom: 0;
+    border-bottom: 0;
 }
 
 #button-logo {
@@ -36,4 +37,13 @@
 #box-2 {
     background-color: orange;
     margin-top: 0;
+}
+
+#button-banner {
+    font-weight: bolder;
+    background-color: rgb(255, 238, 0);
+    background-size: cover;
+    width: 100%;
+
+    
 }
