--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,7 @@
 }
 
 #box-1 {
-    background-color: rgb(85, 101, 130);
+    background-color: rgb(42, 41, 113);
     margin-bottom: 0;
     border-bottom: 0;
 }
@@ -47,3 +47,42 @@
     background-size: cover;
     width: 100%;
 }
+
+#box-5 {
+    background-color: rgb(232, 232, 175);
+    padding-left: 15px;
+}
+
+#box-3 {
+    background-color: rgba(56, 67, 154, 0.866);
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+    justify-content: stretch;
+}
+
+#button-navegacion {
+    grid-column: 1/3;
+    background-color: rgb(117, 224, 235);
+}
+
+.button-article {
+    background-color: rgba(64, 144, 230, 0.988);
+    margin: 15px;
+    padding: 10px;
+}
+
+#box-4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    background-color: rgba(244, 35, 35, 0.897);
+}
+
+.button-publicidad {
+    background-color: rgb(255, 238, 0);
+    margin: 15px;
+    padding: 10px;
+}
+
