--- a/estilos.css
+++ b/estilos.css
@@ -41,6 +41,15 @@ body {
     width: 15%;
 }
 
+#button-logo:hover,
+#button-nav:hover,
+#button-social:hover {
+    background-color: rgb(55, 221, 243);
+    margin: 10px;
+    font-weight: bold;
+    font-size: larger;
+}
+
 #box-2 {
     background-color: orange;
     margin-top: 0;
@@ -123,6 +132,16 @@ body {
         width: 92%;
     }
 
+    #button-logo:hover,
+    #button-nav:hover,
+    #button-social:hover {
+        background-color: rgb(223, 13, 238);
+        width: 94%;
+        padding-right: 2.5%;
+        font-weight: bold;
+        font-size: larger;
+    }
+
     #boxes-together {
         display: grid;
         grid-template-columns: auto;
@@ -171,6 +190,16 @@ body {
         margin-right: auto;
         background-size: cover;
         width: 92%;
+    }
+
+    #button-logo:hover,
+    #button-nav:hover,
+    #button-social:hover {
+        background-color: rgb(14, 234, 66);
+        width: 94%;
+        padding-right: 1%;
+        font-weight: bold;
+        font-size: larger;
     }
 
     #boxes-together {
